stl-test/Tests/array_view/array_view/Negative/test10.cpp
//#fail
#include <array_view>
#include <vector>
int main()
{
    std::vector<int> v(10);
    std::array_view<int, 2> av(v, std::bounds<2>{100, 1});
}
